rename bucket and change path for tiles. enable debug in helm charts. fix bug in authentication